--- a/fame/index.html
+++ b/fame/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>@gnja.xyz</title>
+  <link rel="icon" type="icon" href="https://i.imgur.com/xsCbcoU.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -138,3 +139,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
