--- a/fame/index.html
+++ b/fame/index.html
@@ -19,7 +19,7 @@
 
   <!-- Main Logo -->
 <section class="main-logo">
-  <a href="https://discord.gg/eCTXP4Nh" target="_blank" class="logo">
+  <a href="https://discord.gg/X6ufD52vqQ" target="_blank" class="logo">
     <img src="https://i.imgur.com/xsCbcoU.png" alt="Main Logo">
   </a>
 </section>
@@ -139,4 +139,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
