--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
   <link rel="icon" type="icon" href="https://i.imgur.com/xsCbcoU.png">
   <link rel="stylesheet" href="style.css">
 
-  <meta property="og:title" content="GNJA.XYZ" />
-  <meta property="og:description" content="POWER IS NEVER YOURS TO OWN, IT IS ONLY BORROWED" />
+  <!-- Open Graph (Discord/FB) -->
+  <meta property="og:title" content="ALL ABOUT GANJA" />
+  <meta property="og:description" content="POWER IS NEVER YOURS TO OWN, IT IS ONLY BORROWED. discord.gg/gnja" />
   <meta property="og:url" content="https://gnja.xyz" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://i.imgur.com/xsCbcoU.png" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta property="og:image" content="https://i.imgur.com/62iVy44.jpeg" />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="GNJA.XYZ" />
-  <meta name="twitter:description" content="POWER IS NEVER YOURS TO OWN, IT IS ONLY BORROWED" />
-  <meta name="twitter:image" content="https://i.imgur.com/xsCbcoU.png" />
+  <!-- Twitter Embed -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="ALL ABOUT GANJA" />
+  <meta name="twitter:description" content="POWER IS NEVER YOURS TO OWN, IT IS ONLY BORROWED. discord.gg/gnja" />
+  <meta name="twitter:image" content="https://i.imgur.com/62iVy44.jpeg" />
 </head>
 <body>
-  
+  <!-- Loading Screen -->
   <div id="loading-screen" class="container">
     <div class="header">
       <div class="text-block">
@@ -28,7 +28,7 @@
         <div class="subtitle">discord.gg/gnja</div>
       </div>
       <div class="logo">
-        <img src="https://i.imgur.com/xsCbcoU.png" alt="GNJA Logo">
+        <img src="https://i.imgur.com/7pMohXZ.jpeg" alt="GNJA Logo">
       </div>
     </div>
 
