--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
   <!-- Open Graph (Discord/FB) -->
   <meta property="og:title" content="ALL ABOUT GANJA" />
-  <meta property="og:description" content="POWER IS NEVER YOURS TO OWN, IT IS ONLY BORROWED. discord.gg/gnja" />
+  <meta property="og:description" content="POWER IS NEVER YOURS TO OWN, IT IS ONLY BORROWED" />
   <meta property="og:url" content="https://gnja.xyz" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://i.imgur.com/62iVy44.jpeg" />
+  <meta property="og:image" content="https://i.imgur.com/7pMohXZ.jpeg" />
 
   <!-- Twitter Embed -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="ALL ABOUT GANJA" />
-  <meta name="twitter:description" content="POWER IS NEVER YOURS TO OWN, IT IS ONLY BORROWED. discord.gg/gnja" />
-  <meta name="twitter:image" content="https://i.imgur.com/62iVy44.jpeg" />
+  <meta name="twitter:description" content="POWER IS NEVER YOURS TO OWN, IT IS ONLY BORROWED" />
+  <meta name="twitter:image" content="https://i.imgur.com/7pMohXZ.jpeg" />
 </head>
 <body>
   <!-- Loading Screen -->
