--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>@gnja.xyz</title>
+  <title>Ganja</title>
   <link rel="icon" type="icon" href="https://i.imgur.com/xsCbcoU.png">
   <link rel="stylesheet" href="style.css">
 
@@ -39,3 +39,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
