--- a/fame/index.html
+++ b/fame/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@gnja.xyz</title>
+  <title>Ganja</title>
   <link rel="icon" type="icon" href="https://i.imgur.com/xsCbcoU.png">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -139,5 +139,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
