--- a/yuno/index.html
+++ b/yuno/index.html
@@ -29,9 +29,10 @@
   <a href="https://www.tiktok.com/@youngbyuno" target="_blank" class="social-btn"><i class="fa-brands fa-tiktok"></i></a>
 </div> 
     <div class="views">
-  𓂁𓂄: <span id="view-counter">0</span>
+  👁️‍🗨️: <span id="view-counter">0</span>
 </div>
   <audio id="bg-music" src="https://cdn.discordapp.com/attachments/1325303849455718450/1416897808816148631/ITIM_NA_VAN_-_SCOOP_DOGG_x_DAARTH_x_SKINNY_G_x_HELLMERRY_x_BUDDHABEADS_YELLOWTAPES_VOL.1.mp3?ex=68c8846a&is=68c732ea&hm=589baf33278484678dea158e04aa0a76fa8a8050f0974b7a53902e9ac58e5672&" loop></audio>
   <script src="script.js"></script>
 </body>
 </html>
+
