--- a/yuno/index.html
+++ b/yuno/index.html
@@ -31,8 +31,9 @@
     <div class="views">
   👁️‍🗨️: <span id="view-counter">0</span>
 </div>
-  <audio id="bg-music" src="https://cdn.discordapp.com/attachments/1325303849455718450/1416897808816148631/ITIM_NA_VAN_-_SCOOP_DOGG_x_DAARTH_x_SKINNY_G_x_HELLMERRY_x_BUDDHABEADS_YELLOWTAPES_VOL.1.mp3?ex=68c8846a&is=68c732ea&hm=589baf33278484678dea158e04aa0a76fa8a8050f0974b7a53902e9ac58e5672&" loop></audio>
+  <audio id="bg-music" src="https://cdn.discordapp.com/attachments/1325303849455718450/1405097404818128896/Kiervy_-_Walang_Pag-Ibig_Official_Music_Video.mp3?ex=68c86f2e&is=68c71dae&hm=ef96a7e1f68475768ef4d8c2c2cea8195cb853b86bd6e0a57711ba03e10c0756&" loop></audio>
   <script src="script.js"></script>
 </body>
 </html>
+
 
